# mp-behaviour-modeling

./: .gitignore  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  styles.css
.github/workflows/: publish.yml
.quarto/_freeze/notebooks/02_glm_hmm/execute-results/: html.json
.quarto/idx/: index.qmd.json
.quarto/idx/notebooks/: 01_synthetic_data.qmd.json  02_glm_hmm.qmd.json  03_qlearning.qmd.json  04_model_comparison.qmd.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: 1b27647f  1f250a32  2205af55  9b41f984  INDEX  b0908b6d  cf3df19a  e5f20666
_freeze/notebooks/01_synthetic_data/execute-results/: html.json
_freeze/notebooks/03_qlearning/execute-results/: html.json
_freeze/notebooks/04_model_comparison/execute-results/: html.json
docs/: search.json
docs/notebooks/: 01_synthetic_data.html  02_glm_hmm.html  03_qlearning.html  04_model_comparison.html
docs/site_libs/bootstrap/: bootstrap-45e5d1319a27a3825a91cfafd915ea8e.min.css
notebooks/: 00_fundamentals.qmd  01_synthetic_data.qmd  02_glm_hmm.qmd  03_qlearning.qmd  04_model_comparison.qmd  style.py
notebooks/data/: synthetic_mp.csv
